examples/test/testpolicy15503.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15503
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key31: value45
      key36: value21
      key49: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value7
          key22: value35
          key27: value8
      podSelector:
        matchLabels:
          key22: value45
          key3: value12
